@@ -134,17 +134,13 @@
 
         if (count($g_error_msg)>0)
         {
-          if (atkconfig("display_errors")||atkconfig("debug")>0)
-          {
-            // only show errors in debugmode, or when display_errors is
-            // true.
-            $res.='<br><div style="font-family: monospace; font-size: 11px; color: #FF0000" align="left">error: '.implode("<br>\nerror: ",$g_error_msg).'</div>';
-          }
-          // also send a mail report with errormessages..
+          // send an mail report with errormessages..
           // (even when display of errors is turned off)
           mailreport();
         }
-        $res.=$this->getDebugging();
+        
+        $debugger = &atkinstance('atk.utils.atkdebugger');
+        $res .= $debugger->renderDebugAndErrorMessages();
       }
 
       if (atkconfig("output_gzip") &&
@@ -160,17 +156,6 @@
       {
         echo $res;
       }
-    }
-    
-    function getDebugging()
-    {
-      global $g_debug_msg;
-      if (atkconfig("debug")>0)
-      {
-        $output = '<br><div style="font-family: monospace; font-size: 11px;" align="left" id="atk_debugging_div">'.implode("<br>\n ",$g_debug_msg).'</div>';
-      return $output;
-      }
-      return "";
     }
 
     /**
