@@ -374,6 +374,8 @@ Changed in ATK 5.7
   using {include file="theme:template.tpl} syntax. The resource will make 
   sure you get the correct file from the correct directory (even works for
   overrides at the theme level). [Peter]
++ Added support for showing debug messages for Ajax requests. [Peter]
+* Fixed CSV row count in atkImportHandler. [Peter]
 * atkMetaPolicy::add, atkMetaPolicy::setType now support an array of 
   attribute names as argument for the attribute name parameter. [Peter]
 * atkManyToOneRelation now shows the none label when viewing the value
